feature:ещё более структурирован проект,подправлено логирование, оптимизирована проверка уникальности email при добавлении и обновлении пользователей